--- a/style/Menu.scss
+++ b/style/Menu.scss
@@ -271,8 +271,20 @@ footer {
         margin-bottom: 0.5rem;
     }
     
+
     @include breakpoint(tablet) {
         align-items: center;
+
+        ul {
+            display: flex;
+            width: 100%;
+            justify-content: space-evenly;
+            margin-top: 20px;
+        }
+
+        h2 {
+            font-size: 30px;
+        }
     }
 }
 
