--- a/style/style.css
+++ b/style/style.css
@@ -128,10 +128,13 @@ header img {
 }
 @media (min-width: 64em) {
   #Description p {
-    margin-top: 3rem;
+    margin-top: 2rem;
   }
   #Description #ButtonDescription {
-    margin-top: 4rem;
+    margin-top: 2rem;
+  }
+  #Description h1 {
+    width: 13%;
   }
 }
 
@@ -297,6 +300,9 @@ header img {
   border-radius: 25px 25px 25px 25px;
   margin-left: 5%;
 }
+.Restaurant_card figure span {
+  position: absolute;
+}
 .Restaurant_card img {
   object-fit: cover;
   width: 100%;
@@ -346,6 +352,15 @@ footer li {
 @media (min-width: 48em) {
   footer {
     align-items: center;
+  }
+  footer ul {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    margin-top: 20px;
+  }
+  footer h2 {
+    font-size: 30px;
   }
 }
 
